// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`authenticate mainnet 1`] = `"4yGIDAltS6TIG+8LJgrhxAJ7E8wkqWoKWfSH9JSEUpwlXiK1BMGIT1t1tP5kgkHZoMS+brFbkihtBCIVcChsTwE="`;

exports[`authenticate testnet 1`] = `"mZT9lhJBvrg+/elKOI/uwJWnsl/buGKZzNj2liujgqotMFVqOJ2KJVPFHvbvIJDbtpFjlcbBsAXtTeNwHePRnQE="`;

exports[`createLink generate proof on mainnet 1`] = `
Object {
  "account": "f1ymbkm43ysdiruibji6c6m2iy5bxwbuv5d6cdqmy@fil:f",
  "message": "Create a new account link to your identity.

did:3:bafysdfwefwe",
  "signature": "ptn0BGzsCTD3tPjOtuCMhigE3A2BFadJkOahJ+AuPxNCCGSKTIfBVLb55QKPf0pl14+6YUnRAvdwk8lFc98aZAE=",
  "type": "eoa-tx",
  "version": 2,
}
`;

exports[`createLink generate proof on testnet 1`] = `
Object {
  "account": "t17lxg2i2otnl7mmpw2ocd6o4e3b4un3272vny6ka@fil:t",
  "message": "Create a new account link to your identity.

did:3:bafysdfwefwe",
  "signature": "GuG1fGJQwLs1t33bp/esXhWCU3wIzENq9FBjntcQv2wNmk4Iu9D5KsnU3LpH8rGKPliQWHmkod0dOaJYrAS13QE=",
  "type": "eoa-tx",
  "version": 2,
}
`;
